1. Misc added to the main object 2. UI Alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,7 @@
 .ally-okr {
   padding: 24px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  margin-left: 20%;
   flex-direction: column;
 }
 
@@ -26,7 +25,7 @@
   padding-bottom: 30px;
   position: relative;
   list-style-position: inside;
-  background: linear-gradient(#aeaeae, #aeaeae) 2px 13px/35px 2px no-repeat;
+  background: linear-gradient(#aeaeae, #aeaeae) 0px 14px/35px 2px no-repeat;
 }
 
 .ally-okr__segment>ul {
